Fix Fleet & Chauffeurs pill: single line, no truncation, max-content width

--- a/sass/components/_pills.scss
+++ b/sass/components/_pills.scss
@@ -66,13 +66,16 @@
 	@extend .pill--glass;
 	padding-left: 24px;
 	padding-right: 24px;
-	width: auto;
+	width: max-content;
 	min-width: 103px;
 	box-sizing: border-box;
+	overflow: visible;
 }
 
 .why-us-heading-text {
 	@extend .pill-text;
+	white-space: nowrap;
+	overflow: visible;
 }
 
 .how-it-works-pill {
